Remote deployment now totally working.
To make this work, you need to create a file key and key.pub using openssh. 

You can do this:

$ ssh-keygen -t rsa key

Do not use a passphrase.

It is possible to have amazon make your keypairs for you, but that isn't portable across providers.