@@ -5,13 +5,14 @@
 package edu.ucsb.jpregel.clouds;
 
 import api.MachineGroup;
-import com.google.common.base.Charsets;
 import com.google.common.base.Predicate;
 import com.google.common.collect.Iterables;
-import com.google.common.io.Files;
 import com.google.inject.Inject;
+import com.google.inject.Module;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.ObjectInputStream;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -22,13 +23,7 @@ import org.jclouds.compute.ComputeService;
 import org.jclouds.compute.RunScriptOnNodesException;
 import org.jclouds.compute.domain.ExecChannel;
 import org.jclouds.compute.domain.NodeMetadata;
-import org.jclouds.compute.options.RunScriptOptions;
-import org.jclouds.compute.predicates.NodePredicates;
-import org.jclouds.domain.LoginCredentials;
 import org.jclouds.io.Payloads;
-import org.jclouds.scriptbuilder.ScriptBuilder;
-import org.jclouds.scriptbuilder.domain.Statement;
-import org.jclouds.scriptbuilder.domain.Statements;
 import org.jclouds.ssh.SshClient;
 
 /**
@@ -39,8 +34,9 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
 
     protected final Set<? extends NodeMetadata> nodes;
     protected final ComputeService comp;
-    public static final String JARNAME = "jpregel-aws.jar";
-    private final File jar = new File("dist/" + JARNAME);
+    public static final String JARNAME = "jpregel.jar";
+    private static final File jar = new File("target/" + JARNAME);
+    public static final String CREDENTIALS_MODULE = "credentialsModule";
 
     @Inject
     CloudMachineGroup(Set<? extends NodeMetadata> nodes, ComputeService compute) {
@@ -53,6 +49,12 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
         return Iterables.getOnlyElement(
                 Iterables.getOnlyElement(
                 nodes).getPrivateAddresses());
+    }
+    
+    protected String getPublicHostname() {
+        return Iterables.getOnlyElement(
+                Iterables.getOnlyElement(
+                nodes).getPublicAddresses());
     }
 
     @Override
@@ -81,26 +83,12 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
     public final T syncDeploy(String... args) {
         try {
             System.out.println("syncDeploying");
-            
-//            for (Map.Entry string : comp.runScriptOnNodesMatching(
-//                    NodePredicates.runningInGroup(CloudReservationService.SECURITY_GROUP),
-//                    new ScriptBuilder().addStatement(Statements.), 
-//                    RunScriptOptions.Builder.overrideLoginCredentials(getLoginForCommandExecution())).entrySet()) {
-//                System.out.println(string);
-//            }
-            
-            
             ExecutorService e = Executors.newCachedThreadPool();
             for (NodeMetadata n : nodes) {
                 e.submit(new LaunchTask(n, this.getClass().getName(), args));
             }
-            try {
-                e.awaitTermination(Long.MAX_VALUE, TimeUnit.DAYS);
-            } catch (InterruptedException ex) {
-                Logger.getLogger(CloudMachineGroup.class.getName()).log(Level.SEVERE, null, ex);
-            }
             e.shutdown();
-            return getRemoteReference();
+            e.awaitTermination(Long.MAX_VALUE, TimeUnit.DAYS);
         } catch (Exception ex) {
             Logger.getLogger(CloudMachineGroup.class.getName()).log(Level.SEVERE, null, ex);
         }
@@ -110,8 +98,6 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
     protected abstract T getRemoteReference();
 
     private class LaunchTask implements Runnable {
-        public static final String CREDENTIALS_MODULE = "credentialsModule";
-
         private final String mainClass;
         private final NodeMetadata nm;
         private final String[] args;
@@ -126,29 +112,28 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
         public void run() {
             System.out.println("Connecting");
             SshClient ssh = comp.getContext().utils().sshForNode().apply(nm);
-            System.out.println("Got client "+ ssh.getUsername()+"@"+ssh.getHostAddress());
+            System.out.println("Got client " + ssh.getUsername() + "@" + ssh.getHostAddress());
             try {
                 ssh.connect();
                 System.out.println("Connected");
                 ssh.exec("echo \"grant{ permission java.security.AllPermission;};\" > ~/policy ");
                 System.out.println("Policy uploaded");
-                ssh.put("~/"+CREDENTIALS_MODULE, Payloads.newFilePayload(new File(CREDENTIALS_MODULE)));
-                ssh.put("~/" + JARNAME, Payloads.newPayload(jar));
+                ssh.put(CREDENTIALS_MODULE, Payloads.newFilePayload(new File(CREDENTIALS_MODULE)));
+                ssh.put(JARNAME, Payloads.newPayload(jar));
                 System.out.println("Jar uploaded");
-                ExecChannel execChannel = ssh.execChannel("java -server -cp " + JARNAME
+                ssh.execChannel("java -server "
+                        + "-XX:+UseConcMarkSweepGC "
+                        + "-XX:+AggressiveOpts "
+                        + "-XX:+UseFastAccessorMethods "
+                        + "-cp " + JARNAME
                         + " -Djava.security.policy=policy "
+                        //ssh address so we know it's an address the client can reach
+                        + " -Djava.rmi.server.hostname=" + ssh.getHostAddress() + " " 
                         + heapSize(nm.getHardware().getRam())
                         + " " + mainClass + " "
-                        + args[0]);
-                System.out.println("Executions submitted");
-//                Thread.sleep(10000);
-//                BufferedReader br = new BufferedReader(new InputStreamReader(execChannel.getOutput()));
-//                String s;
-//                System.out.println("Deployed");
-//                while ((s = br.readLine()) != null) {
-//                    System.out.println(s);
-//                }
-//                br.close();
+                        + args[0]
+                        + " >> log.log"); //save output until a real logger works
+                System.out.println(ssh.getHostAddress() + " Executions submitted");
             } catch (Exception ex) {
                 Logger.getLogger(CloudMachineGroup.class.getName()).log(Level.SEVERE, null, ex);
             } finally {
@@ -157,6 +142,13 @@ public abstract class CloudMachineGroup<T> extends MachineGroup<T> {
                 }
             }
         }
+    }
+
+    protected static Module getCredentials() throws IOException, ClassNotFoundException {
+        ObjectInputStream oi = new ObjectInputStream(new FileInputStream(CREDENTIALS_MODULE));
+        Module m = (Module) oi.readObject();
+        oi.close();
+        return m;
     }
 
     private String heapSize(int ram) {
